crates/math-core/tests/snapshots/conversion_test__matrix_color_ends_at_row.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\begin{matrix}\\color{red} a \\\\ \\hline b\\end{matrix}"
---
<math>
    <mtable displaystyle="false" scriptlevel="0">
        <mtr>
            <mtd>
                <mrow style="color:#FF0000;">
                    <mi>a</mi>
                </mrow>
            </mtd>
        </mtr>
        <mtr>
            <mtd style="border-top: 0.05em solid currentcolor;">
                <mi>b</mi>
            </mtd>
        </mtr>
    </mtable>
</math>
