crates/math-core/tests/snapshots/conversion_test__matrix_hlines.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\begin{matrix} \\hline 1 & 2 \\\\ \\hline 3 & 4 \\\\ \\hdashline 5 & 6 \\\\ \\hline \\end{matrix}"
---
<math>
    <mtable style="border-top: 0.05em solid currentcolor;" displaystyle="false" scriptlevel="0">
        <mtr>
            <mtd>
                <mn>1</mn>
            </mtd>
            <mtd>
                <mn>2</mn>
            </mtd>
        </mtr>
        <mtr>
            <mtd style="border-top: 0.05em solid currentcolor;">
                <mn>3</mn>
            </mtd>
            <mtd style="border-top: 0.05em solid currentcolor;">
                <mn>4</mn>
            </mtd>
        </mtr>
        <mtr>
            <mtd style="border-top: 0.05em dashed currentcolor;">
                <mn>5</mn>
            </mtd>
            <mtd style="border-top: 0.05em dashed currentcolor;">
                <mn>6</mn>
            </mtd>
        </mtr>
        <mtr>
            <mtd style="border-top: 0.05em solid currentcolor;">
            </mtd>
        </mtr>
    </mtable>
</math>
