crates/math-core/tests/snapshots/conversion_test__matrix_over_in_cell.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\begin{matrix} a \\over b & c \\end{matrix}"
---
<math>
    <mtable displaystyle="false" scriptlevel="0">
        <mtr>
            <mtd>
                <mfrac>
                    <mi>a</mi>
                    <mi>b</mi>
                </mfrac>
            </mtd>
            <mtd>
                <mi>c</mi>
            </mtd>
        </mtr>
    </mtable>
</math>
