crates/math-core/tests/snapshots/conversion_test__max_mixed_limits.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\max\\nolimits_0\\displaylimits^1\\limits"
---
<math>
    <munderover>
        <mrow><mspace/><mi>max</mi></mrow>
        <mn>0</mn>
        <mn>1</mn>
    </munderover>
</math>
